--- a/a.html
+++ b/a.html
@@ -29,8 +29,8 @@
 <span class="badge badge-dark">7</span>
 <br>
 <br>
-<button class="badge badge-danger">Notification
-    <span class="badge badge-primary">4</span>
+<button class="badge badge-primary">Notification
+    <span class="badge badge-danger">4</span>
 </button>
 <br>
 <br>
